# haskell-programming-exercises

./: .gitignore  learn-haskell.cabal  stack.yaml
src/: ADTs.hs  CaesarCipher.hs  Cipher.hs  DatabaseItem.hs  FoldsChapter.hs  FunctorSpec.hs  Gens.hs  Lists.hs  ListsChapter.hs  Main.hs  MbMonoid.hs  PoemLines.hs  Recursion.hs  Reverse.hs  Scans.hs  Semigroup.hs  SemigroupSpec.hs  WordNumber.hs  WordNumberSpec.hs
src/adt/: AsPatterns.hs  BinTree.hs  ConsDecons.hs  HuttonsRazor.hs  Jammin.hs  Phone.hs  Vigenere.hs
src/adversity/: Chapter.hs  InUse.hs  LibEither.hs  LibMaybe.hs  Natural.hs  Unfold.hs
src/applicative/: ApplicativeLaws.hs  Combinations.hs  InUse.hs  ListApplicative.hs  ListApplicativeSpec.hs  ZipListApplicativeSpec.hs
src/building/: Chapter.hs  Palindrome.hs
src/composing/: BifunctorInstances.hs  Compose.hs  IdentityT.hs
src/foldable/: BasicDerivedOpsExercises.hs  ChapterExercises.hs
src/functor/: ChapterExercises.hs  FunctorLaws.hs  LiftingExercises.hs  ReplaceExperiment.hs
src/list/: ListComprehensions.hs  Lists.hs  ListsChapter.hs
src/monad/: BadMonadSpec.hs  ChapterExercises.hs  MonadSpec.hs
src/monoid/: MbMonoidSpec.hs  Monoid.hs  MonoidChEx.hs
src/nonstrictness/: CoreDump.hs
src/parser/: Fractions.hs  Ini.hs  IntParser.hs  LearnParsers.hs  Marshalling.hs  PhoneNumberParser.hs  SemVerParser.hs
src/reader/: ReaderApplicative.hs  ReaderInstances.hs  ReaderPractice.hs  ThisIsReader.hs
src/state/: ChapterExercises.hs  FizzBuzz.hs  FizzBuzzDlist.hs  Moi.hs  MoiSpec.hs  RollingDices.hs
src/test/: ArrowBasics.hs  Arrows.hs  Composition.hs  Gems.hs  Pokemons.hs
src/transformers/: ChapterExercises.hs  Commute.hs  EitherT.hs  FixTheCode.hs  HitCounter.hs  MaybeT.hs  Morra.hs  OuterInner.hs  ReaderT.hs  StateT.hs
src/traversable/: AxingTediousCode.hs  ChapterExercises.hs  Instances.hs
test/: ApplicativeSpec.hs  FunctorSpec.hs  ListApplicativeSpec.hs  Main.hs  MonoidSpec.hs  RecursionSpec.hs  SemigroupSpec.hs  WordNumberSpec.hs
test/applicative/: ApplicativeChapterSpec.hs  ApplicativeExerciseSpec.hs
