name:              learn-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable learn-haskell
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base
                   , time
                   , readline
                   , random

library
  hs-source-dirs:    src
                   , src/functor
                   , src/applicative
                   , src/reader
  other-modules:     RecursionSpec
                   , WordNumberSpec
                   , MonoidSpec
                   , SemigroupSpec
                   , Recursion
                   , WordNumber
                   , Monoid
                   , MbMonoid
                   , Semigroup
                   , ApplicativeLaws
                   , ZipListApplicativeSpec
                   , ListApplicativeSpec
                   , ReplaceExperiment
                   , ThisIsReader
                   , ReaderApplicative
  build-depends:     base == 4.*
                   , semigroups
                   , hspec
                   , checkers
                   , hspec-checkers
                   , QuickCheck
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-type-defaults
