name:              learn-haskell
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable learn-haskell
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base
                   , time
                   , readline
                   , random

library
  hs-source-dirs:    src
                   , src/functor
                   , src/applicative
                   , src/reader
                   , src/state
                   , src/composing
                   , src/monad
                   , src/monoid
                   , src/transformers
  other-modules:     RecursionSpec
                   , WordNumberSpec
                   , MonoidSpec
                   , SemigroupSpec
                   , Recursion
                   , WordNumber
                   , Monoid
                   , MbMonoid
                   , Semigroup
                   , ApplicativeLaws
                   , ZipListApplicativeSpec
                   , ListApplicativeSpec
                   , ReplaceExperiment
                   , ThisIsReader
                   , ReaderInstances
                   , Moi
  build-depends:     base == 4.*
                   , containers
                   , text
                   , bytestring
                   , raw-strings-qq
                   , semigroups
                   , hspec
                   , checkers
                   , hspec-checkers
                   , QuickCheck
                   , transformers
                   , dlist
                   , parsers
                   , attoparsec
                   , trifecta
                   , aeson
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-type-defaults
  default-extensions: InstanceSigs
